# danish-media-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
app/: altmount.py  arr.py  config.py  danish_intelligence.py  decision.py  import_health.py  indexer_capabilities.py  main.py  metadata.py  models.py  prowlarr.py  quality.py  scoring.py  seerr.py  store.py  targets.py  titlematch.py
app/static/: app.js  index.html  styles.css
docs/: arr-seerr-research.md
docs/ui-redesign-handoff/: FRONTEND_CONTRACT.md  PROMPT_FOR_OTHER_AI.md  README.md  SAMPLE_DATA.md
tests/: test_altmount.py  test_arr.py  test_background_monitor.py  test_danish_intelligence.py  test_feed_sync.py  test_import_health.py  test_indexer_capabilities.py  test_metadata_targets.py  test_network_analyzer.py  test_prowlarr.py  test_request_flow.py  test_scoring.py  test_seerr.py  test_seerr_sync.py  test_store.py
